Next change in index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>My first page</title>
 </head>
 <body>
-	<h1>Hello coursera students!</h1>
+	<h1>Hello coursera students! I am excited to learn more about angluarjs</h1>
 
 </body>
 </html>
