--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<html>
+<html ng-app="myFirstApp">
 <head>
-	<title>My first page</title>
+	<title>My first angular page</title>
+	<script src="angular.min.js"></script>
+	<script src="app.js"></script>
 </head>
 <body>
-	<h1>Hello coursera students! I am excited to learn more about angluarjs</h1>
-
+	<div ng-controller="myFirstController">
+	{{name}}
+	{{sayHello()}}
+	<input type="text" ng-model="name"></input>
+	</div>
 </body>
 </html>
